methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:2: error: not found: value False
var sawBaggle=False 
              ^MethodsReturning:9: error: not found: value True
        sawBaggle=True
                  ^